# Mirage-simulation

./: .gitignore  CALCULATION_RULES.md  Decisions to make.md  README.md  Simulation - Md des données Year -3.md  Simulation - year 0.md  Simulation Md des données year -2.md  app.py  pyproject.toml
app/: __init__.py  main.py  state.py
app/components/: __init__.py  charts.py  forms.py  metrics.py  tables.py
app/pages/: dashboard.py  decisions.py  results.py
data/: README.md  saved_defaults.json
src/mirage/: __init__.py  calculator.py  config.py  constants.py  models.py  parser.py  utils.py
src/mirage/analysis/: __init__.py  financial.py  market.py  production.py
src/mirage/loaders/: __init__.py  base_loader.py  decision_loader.py  market_loader.py  results_loader.py
src/mirage/models/: __init__.py  decisions.py  firm.py  market.py  results.py
src/mirage/services/: __init__.py  analysis_service.py  decision_service.py  results_service.py
src/mirage/simulation/: parser.py
src/mirage/utils/: __init__.py  formatters.py  validators.py
tests/: __init__.py  test_analysis.py  test_decisions.py
